// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ogf patch-texture-refs should read back the renamed texture reference 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read ogf file <sandbox>/renamed.ogf",
    "Ogf file information",
    "Version: 4, model_type: 3, shader_id: 0, OgfBox { min: Vector3d { x: -0.016617509, y: -0.043978497, z: -0.016535774 }, max: Vector3d { x: 0.016760565, y: 0.03416283, z: 0.016411088 } } - OgfSphere { position: Vector3d { x: 7.152837e-5, y: -0.0049078334, z: -6.234273e-5 }, radius: 0.045567695 }",
    "Boundaries box: OgfBox { min: Vector3d { x: -0.016617509, y: -0.043978497, z: -0.016535774 }, max: Vector3d { x: 0.016760565, y: 0.03416283, z: 0.016411088 } }",
    "Boundaries sphere: OgfSphere { position: Vector3d { x: 7.152837e-5, y: -0.0049078334, z: -6.234273e-5 }, radius: 0.045567695 }",
    "Description: OgfDescriptionChunk { source_file: "x:\\\\rawdata\\\\objects\\\\dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud.object", convertor: "\\\\\\\\DIEHARD\\\\Mr.DieHard", built_at: 0, creator: "\\\\\\\\DIEHARD\\\\Mr.DieHard", created_at: 1207749428, editor: "\\\\\\\\DIEHARD\\\\Mr.DieHard", edited_at: 1207749845 }",
    "Bones: 2",
    "[0] name: wpn_body",
    "[0] parent:",
    "[1] name: body",
    "[1] parent: wpn_body",
    "Motion refs: ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud_animation", "omf\\\\wpn_mp5_hud_animation"]",
    "OGF children (1):",
    "[0] texture name: wpn\\wpn_bolt_renamed",
    "[0] shader name: models\\model",
  ],
}
`;

exports[`ogf patch-texture-refs should refuse a reference the visual does not carry 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Verify error: Refused to patch <resources>/gamedata/meshes/ogf/dev_bolt_hud.ogf, no texture reference matched 'wpn\\does_not_exist', found ["wpn\\\\wpn_bolt"]",
  ],
  "stdout": [
    "Patch ogf texture refs <resources>/gamedata/meshes/ogf/dev_bolt_hud.ogf, 'wpn\\does_not_exist' -> 'wpn\\replacement', existing ["wpn\\\\wpn_bolt"]",
  ],
}
`;

exports[`ogf patch-texture-refs should rename a texture ref 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf texture refs <resources>/gamedata/meshes/ogf/dev_bolt_hud.ogf, 'wpn\\wpn_bolt' -> 'wpn\\wpn_bolt_renamed', existing ["wpn\\\\wpn_bolt"]",
    "Renamed 1 ogf texture references, written into <sandbox>/renamed.ogf",
  ],
}
`;

exports[`ogf patch-texture-refs should report a dry run without writing 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf texture refs <resources>/gamedata/meshes/ogf/dev_bolt_hud.ogf, 'wpn\\wpn_bolt' -> 'wpn\\wpn_bolt_renamed', existing ["wpn\\\\wpn_bolt"]",
    "Dry run, nothing written, 1 references would be renamed and <sandbox>/never-renamed.ogf would receive 13875 bytes instead of 13867",
  ],
}
`;

exports[`ogf patch-texture-refs should rewrite in place when given no destination 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf texture refs <sandbox>/in-place.ogf, 'wpn\\wpn_bolt' -> 'wpn\\wpn_bolt_renamed', existing ["wpn\\\\wpn_bolt"]",
    "Renamed 1 ogf texture references, written into <sandbox>/in-place.ogf",
  ],
}
`;

exports[`ogf patch-texture-refs should write the expected files 1`] = `
[
  {
    "path": "in-place.ogf",
    "sha256": "7c7a069c7950b9f11eb53815b64de9303a97b78e66f842033e895c69d2a3d64c",
    "size": 13875,
  },
  {
    "path": "renamed.ogf",
    "sha256": "7c7a069c7950b9f11eb53815b64de9303a97b78e66f842033e895c69d2a3d64c",
    "size": 13875,
  },
]
`;
